--- a/index.html
+++ b/index.html
@@ -3,173 +3,265 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Techmaa - Find Your Dream Team</title>
+    <title>Food and Ice Cream Ordering Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            line-height: 1.6;
-            background-color: #f4f4f4;
+            background-color: #f8f8f8;
         }
 
         header {
-            background: #007bff;
+            background-color: #ff5722;
             color: white;
-            padding: 2.5rem 0;
+            padding: 20px 20px;
             display: flex;
-            flex-direction: column; /* Stack the elements vertically */
             align-items: center;
-            justify-content: center;
-            position: relative;
+            justify-content: space-between;
         }
 
-        header img {
-            height: 150px;
-            position: absolute;
-            left: 2rem;
+        .header-text {
+            text-align: center;
+            flex-grow: 1;
         }
 
         header h1 {
-            font-size: 2.5rem;
             margin: 0;
-            text-align: center;
         }
 
         header p {
-            margin-top: 0.5rem;
+            margin: 5px 0 0;
+        }
+
+        header img {
+            height: 100px;
+            width: auto;
+            border-radius: 5px;
         }
 
         nav {
             display: flex;
             justify-content: center;
-            background: #333;
+            background-color: #333;
         }
 
         nav a {
             color: white;
-            padding: 0.75rem 1.5rem;
+            padding: 14px 20px;
             text-decoration: none;
+            text-align: center;
         }
 
         nav a:hover {
-            background: #007bff;
+            background-color: #575757;
         }
 
-        .section {
-            padding: 2rem;
+        .container {
+            padding: 20px;
+        }
+
+        .menu-section {
+            margin-bottom: 40px;
+        }
+
+        .menu-section h2 {
             text-align: center;
+            color: #ff5722;
+            margin-bottom: 20px;
         }
 
-        .section h2 {
-            margin-bottom: 1rem;
-            color: #333;
+        .menu {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
         }
 
-        .jobs {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .job-card {
+        .menu-item {
             background: white;
-            margin: 1rem;
-            padding: 1rem;
+            border: 1px solid #ddd;
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            padding: 20px;
         }
 
-        .job-card h3 {
-            color: #007bff;
+        .menu-item img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
         }
 
-        .job-card p {
-            margin: 0.5rem 0;
+        .menu-item h3 {
+            margin: 10px 0;
+        }
+
+        .menu-item p {
+            color: #555;
+        }
+
+        .menu-item button {
+            background-color: #ff5722;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .menu-item button:hover {
+            background-color: #e64a19;
+        }
+
+        .about, .contact {
+            display: none;
+            padding: 20px;
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin: 20px;
         }
 
         footer {
-            background: #333;
-            color: white;
             text-align: center;
-            padding: 1rem 0;
-            margin-top: 2rem;
-        }
-
-        .apply-btn {
-            display: inline-block;
-            margin-top: 1rem;
-            padding: 0.5rem 1rem;
-            background: #007bff;
+            padding: 10px 0;
+            background-color: #333;
             color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .apply-btn:hover {
-            background: #0056b3;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
+    <script>
+        function orderNow(itemName){
+            alert("you have ordered: "+itemName+" .Thank you for your order!");
+        }
+        function showSection(sectionId) {
+            document.getElementById('menu').style.display = 'none';
+            document.getElementById('about').style.display = 'none';
+            document.getElementById('contact').style.display = 'none';
+
+            document.getElementById(sectionId).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
     <header>
-        <img src="C:\Users\Srimathi Purimetla\Desktop\web\logo.png" alt="Techmaa Logo">
-        <h1>Techmaa</h1>
-        <p>A Brand of PRU Technologies Private lmtd</p>
-    </header>
-     <nav>
-        <a href="#jobs">Jobs</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <section id="jobs" class="section">
-        <h2>Job Listings</h2>
-        <div class="jobs">
-            <div class="job-card">
-                <h3>Software Engineer Intern</h3>
-                <p>Location: Remote</p>
-                <p>Experience: No Experience Required</p>
-                <p>Education qualification: BE/B.tech</p>
-                <p>Duration: 3 months</p>
-                <a href="javascript:void(0);" class="apply-btn" onclick="showMessage()">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <h3>HR Intern</h3>
-                <p>Location: Remote</p>
-                <p>Experience: No Experience required</p>
-                <p>Education qualification: Any degree </p>
-                <p>Duration: 3 months</p>
-                <a href="javascript:void(0);" class="apply-btn" onclick="showMessage()">Apply Now</a>
-            </div>
-            <div class="job-card">
-                <h3>IT Trainer</h3>
-                <p>Location: Remote</p>
-                <p>Experience: 3+ years</p>
-                <a href="javascript:void(0);" class="apply-btn" onclick="showMessage()">Apply Now</a>
-            </div>
-
+        <div class="header-text">
+            <h1>FOODIE CHARMS SNACKS AND ICE CREAMS</h1>
+            <p>Your favorite snacks and ice cream delivered fast & fresh</p>
         </div>
-    </section>
+        <img src="C:\Users\Srimathi Purimetla\Desktop\Food\logo.png" alt="Website Logo">
+    </header>
 
-    <section id="about" class="section">
+    <nav>
+        <a href="#" onclick="showSection('menu')">Menu</a>
+        <a href="#" onclick="showSection('about')">About</a>
+        <a href="#" onclick="showSection('contact')">Contact</a>
+    </nav>
+
+    <div class="container" id="menu">
+        <div class="menu-section">
+            <h2>Food Dishes</h2>
+            <div class="menu">
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\pizza.jpg" alt="Pizza">
+                    <h3>Pizza</h3>
+                    <p>Cheesy and delicious</p>
+                    <button onclick="orderNow('Pizza')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\burger.jpg" alt="Burger">
+                    <h3>Burger</h3>
+                    <p>Juicy and flavorful</p>
+                    <button onclick="orderNow('Burger')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\pasta.jpg" alt="Pasta">
+                    <h3>Pasta</h3>
+                    <p>Rich and creamy</p>
+                    <button onclick="orderNow('Pasta')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\salad.jpg" alt="Salad">
+                    <h3>Salad</h3>
+                    <p>Fresh and healthy</p>
+                    <button onclick="orderNow('Salad')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\sandwich.jpg" alt="Sandwich">
+                    <h3>Sandwich</h3>
+                    <p>Quick and tasty</p>
+                    <button onclick="orderNow('Sandwich')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\tacos.jpg" alt="Tacos">
+                    <h3>Tacos</h3>
+                    <p>Spicy and delicious</p>
+                    <button onclick="orderNow('Tacos')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\french.jpg" alt="French Fries">
+                    <h3>French Fries</h3>
+                    <p>Golden and crispy</p>
+                    <button onclick="orderNow('French Fries')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\chicken.jpg" alt="Chicken Wings">
+                    <h3>Chicken Wings</h3>
+                    <p>Perfectly seasoned</p>
+                    <button onclick="orderNow('Chicken Wings')">Order Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="menu-section">
+            <h2>Ice Creams</h2>
+            <div class="menu">
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\vanilla.jpg" alt="Vanilla Ice Cream">
+                    <h3>Vanilla Ice Cream</h3>
+                    <p>Classic and creamy</p>
+                    <button onclick="orderNow('Vannila Ice Cream')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\chocolate.jpg" alt="Chocolate Ice Cream">
+                    <h3>Chocolate Ice Cream</h3>
+                    <p>Rich and indulgent</p>
+                    <button onclick="orderNow('Chocolate Ice Cream')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\strawberry.jpg" alt="Strawberry Ice Cream">
+                    <h3>Strawberry Ice Cream</h3>
+                    <p>Fruity and refreshing</p>
+                    <button onclick="orderNow('Strawberry Ice cfeam')">Order Now</button>
+                </div>
+                <div class="menu-item">
+                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\mint.jpg" alt="Mint Ice Cream">
+                    <h3>Mint Ice Cream</h3>
+                    <p>Cool and delightful</p>
+                    <button onclick="orderNow('Mint Ice Cream')">Order Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container about" id="about">
         <h2>About Us</h2>
-        <p>Techmaa is dedicated to connecting employers with top talent. We simplify the hiring process to help businesses grow and individuals succeed.</p>
-    </section>
+        <p>Welcome to Delicious Meals & Ice Creams! We are dedicated to bringing you the best dishes and ice creams crafted with love and fresh ingredients. Whether you're craving a savory meal or a sweet treat, we have something special for everyone. Enjoy the convenience of online ordering and fast delivery!</p>
+    </div>
 
-    <section id="contact" class="section">
+    <div class="container contact" id="contact">
         <h2>Contact Us</h2>
-        <p>Email: hrd.techmaa@gmail.com | Phone: 4565879898</p>
-    </section>
+        <p>If you have any questions or feedback, feel free to reach out to us!</p>
+        <p>Email: support@deliciousmeals.com</p>
+        <p>Phone: (123) 456-7890</p>
+        <p>Address: 123 Food Street, Flavor Town</p>
+    </div>
 
     <footer>
-        <p>&copy; 2024 Techmaa. All rights reserved.</p>
+        <p>&copy; 2025 Delicious Meals & Ice Creams. All Rights Reserved.</p>
     </footer>
-
-    <script>
-        function showMessage() {
-            alert("Please share your resume at https://t.me/TechmaaOfficial or hrd.techmaa@gmail.com");
-        }
-    </script>
 </body>
 </html>
