--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <h2>Food Dishes</h2>
             <div class="menu">
                 <div class="menu-item">
-                    <img src="C:\Users\Srimathi Purimetla\Desktop\Food\pizza.jpg" alt="Pizza">
+                    <img src="https://tse1.mm.bing.net/th?id=OIP.8UeIFPMYwIErE1ShRYB9QAHaEo&pid=Api&rs=1&c=1&qlt=95&h=180" alt="Pizza">
                     <h3>Pizza</h3>
                     <p>Cheesy and delicious</p>
                     <button onclick="orderNow('Pizza')">Order Now</button>
