--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@
 
             document.getElementById(sectionId).style.display = 'block';
         }
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11538678527">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11538678527');
     </script>
 </head>
 <body>
